--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -37,16 +37,16 @@
           <table class="table">
             <tr>
               <th>#</th>
-              <th>Name</th>
               <th>Email</th>
               <th>Suject</th>
+              <th>website (Optional)</th>
               <th>Created Date</th>
             </tr>
             <tr *ngFor="let item of contactUs | filter : searchText;index as i">
               <td>{{i+1}}</td>
-              <td>{{item?.name}}</td>
               <td>{{item?.email}}</td>
               <td>{{item?.subject}}</td>
+              <td>{{item?.website}}</td>
               <td>{{item?.createdAt | date:'mediumDate'}}</td>
             </tr>
           </table>
