--- a/src/app/layout/layout-sidenav/layout-sidenav.component.html
+++ b/src/app/layout/layout-sidenav/layout-sidenav.component.html
@@ -30,6 +30,10 @@
     </sidenav-menu>
 
 
+
+    <sidenav-router-link icon="ion ion-md-home" route="/survey" [active]="isActive('/survey')">Survey
+    </sidenav-router-link>
+
     <sidenav-router-link icon="ion ion-md-home" route="/contact-us" [active]="isActive('/contact-us')">Contact Us
     </sidenav-router-link>
 
