--- a/src/app/pages/products/all-products/all-products.component.html
+++ b/src/app/pages/products/all-products/all-products.component.html
@@ -39,6 +39,7 @@
               <th>#</th>
               <th>Name</th>
               <th>Cover Photo</th>
+              <th>Category</th>
               <th>created At</th>
               <th>Action</th>
             </tr>
@@ -46,6 +47,7 @@
               <td>{{i+1}}</td>
               <td>{{item?.name}}</td>
               <td><img src="{{baseUrl}}/{{item?.image}}" id="prodImage" alt=""></td>
+              <td>{{item?.category?.name}}</td>
               <td>{{item?.createdAt | date:'mediumDate'}}</td>
               <td>
                 <i class="fa fa-pencil" aria-hidden="true" routerLink="/products/{{item?._id}}"></i>
