--- a/src/app/layout/layout-sidenav/layout-sidenav.component.html
+++ b/src/app/layout/layout-sidenav/layout-sidenav.component.html
@@ -29,13 +29,16 @@
       </sidenav-router-link>
     </sidenav-menu>
 
-
-
-    <sidenav-router-link icon="ion ion-md-home" route="/survey" [active]="isActive('/survey')">Survey
+    <sidenav-router-link icon="ion ion-md-menu" route="/product-votes" [active]="isActive('/product-votes')">Product
+      Votes
     </sidenav-router-link>
 
-    <sidenav-router-link icon="ion ion-md-home" route="/contact-us" [active]="isActive('/contact-us')">Contact Us
+    <sidenav-router-link icon="ion ion-md-menu" route="/survey" [active]="isActive('/survey')">Survey
     </sidenav-router-link>
+
+    <sidenav-router-link icon="ion ion-md-menu" route="/contact-us" [active]="isActive('/contact-us')">Contact Us
+    </sidenav-router-link>
+
 
 
 
