--- a/src/app/pages/HotTopics/all-topics/all-topics.component.html
+++ b/src/app/pages/HotTopics/all-topics/all-topics.component.html
@@ -39,13 +39,15 @@
               <th>#</th>
               <th>Name</th>
               <th>Cover Photo</th>
-              <th>created At</th>
+              <th>Category</th>
+              <th>Created At</th>
               <th>Action</th>
             </tr>
             <tr *ngFor="let item of topics | filter : searchText;index as i">
               <td>{{i+1}}</td>
               <td>{{item?.name}}</td>
               <td><img src="{{baseUrl}}/{{item?.image}}" id="prodImage" alt=""></td>
+              <td>{{item?.category?.name}}</td>
               <td>{{item?.createdAt | date:'mediumDate'}}</td>
               <td>
                 <i class="fa fa-pencil" aria-hidden="true" routerLink="/hot-topics/{{item?._id}}"></i>
