--- a/src/app/pages/HotTopics/all-topics/all-topics.component.html
+++ b/src/app/pages/HotTopics/all-topics/all-topics.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-6 col-12">
     <h4 class="font-weight-bold py-3 mb-4">
-      <span class="text-muted font-weight-light">All /</span> Hot Topics
+      <span class="text-muted font-weight-light">All /</span> Fan Votes
     </h4>
   </div>
   <div class="col-md-6 text-right">
